# GodotRustTemplate

./: .gitignore  flake.nix
godot/: export_presets.cfg  project.godot  rust.gdextension  rust.gdextension.uid
godot/scenes/: root.tscn
godot/sprites/: icon.svg.import  pixel.png.import
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  macros.rs
scripts/: android.sh  android_release.sh  wasm_not_threaded.sh  wasm_not_threaded_release.sh  wasm_threaded.sh  wasm_threaded_release.sh
